--- a/app/src/main/res/layout/booking_recycler_tourist_item.xml
+++ b/app/src/main/res/layout/booking_recycler_tourist_item.xml
@@ -1,5 +1,6 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
@@ -36,12 +37,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/sf_pro_display_medium"
-            android:text="Первый турист"
             android:textColor="@color/black"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="@+id/btn_booking_expand"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/btn_booking_expand" />
+            app:layout_constraintTop_toTopOf="@id/btn_booking_expand"
+            tools:text="Первый турист" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_tourist_name"
@@ -49,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:focusableInTouchMode="true"
-            android:hint="Имя"
+            android:hint="@string/booking_name_hint"
             android:textColorHint="@color/grey_field_text"
             android:visibility="gone"
             app:boxBackgroundColor="@color/grey_field"
@@ -79,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:focusableInTouchMode="true"
-            android:hint="Фамилия"
+            android:hint="@string/booking_surname_hint"
             android:textColorHint="@color/grey_field_text"
             android:visibility="gone"
             app:boxBackgroundColor="@color/grey_field"
@@ -109,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:focusableInTouchMode="true"
-            android:hint="Дата рождения"
+            android:hint="@string/booking_birthday_hint"
             android:textColorHint="@color/grey_field_text"
             android:visibility="gone"
             app:boxBackgroundColor="@color/grey_field"
@@ -139,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:focusableInTouchMode="true"
-            android:hint="Гражданство"
+            android:hint="@string/booking_citizenship_hint"
             android:textColorHint="@color/grey_field_text"
             android:visibility="gone"
             app:boxBackgroundColor="@color/grey_field"
@@ -169,7 +170,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:focusableInTouchMode="true"
-            android:hint="Номер загранпаспорта"
+            android:hint="@string/booking_passport_hint"
             android:textColorHint="@color/grey_field_text"
             android:visibility="gone"
             app:boxBackgroundColor="@color/grey_field"
@@ -199,7 +200,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:focusableInTouchMode="true"
-            android:hint="Срок действия загранпаспорта"
+            android:hint="@string/booking_expiration_hint"
             android:textColorHint="@color/grey_field_text"
             android:visibility="gone"
             app:boxBackgroundColor="@color/grey_field"
