--- a/app/src/main/res/layout/booking_recycler_add_tourist_item.xml
+++ b/app/src/main/res/layout/booking_recycler_add_tourist_item.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/sf_pro_display_medium"
-            android:text="Добавить туриста"
+            android:text="@string/booking_add_tourist"
             android:textColor="@color/black"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
