--- a/app/src/main/res/layout/booking_recycler_hotel_item.xml
+++ b/app/src/main/res/layout/booking_recycler_hotel_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/booking_hotel_block"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,8 +10,8 @@
     app:cardCornerRadius="12dp"
     app:cardElevation="0dp"
     app:contentPadding="@dimen/dimen_16"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent">
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,28 +35,28 @@
                 android:textColor="@color/orange"
                 android:textSize="16sp"
                 app:drawableStartCompat="@drawable/star_icon"
-                android:text="5 Превосходно" />
+                tools:text="5 Превосходно" />
         </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tv_booking_hotel_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Steigenberger Makadi"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sf_pro_display_medium"
             android:textColor="@color/black"
-            android:textSize="22sp"/>
+            android:textSize="22sp"
+            tools:text="Steigenberger Makadi" />
 
         <TextView
             android:id="@+id/tv_booking_hotel_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Madinat Makadi, Safaga Road, Makadi Bay, Египет"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sf_pro_display_medium"
             android:textColor="@color/blue"
-            android:textSize="14sp"/>
+            android:textSize="14sp"
+            tools:text="Madinat Makadi, Safaga Road, Makadi Bay, Египет" />
 
     </LinearLayout>
 
