--- a/app/src/main/res/layout/booking_recycler_pay_button_item.xml
+++ b/app/src/main/res/layout/booking_recycler_pay_button_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:background="@color/white"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/ll_about_hotel"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    app:layout_constraintTop_toBottomOf="@+id/ll_about_hotel">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_booking_to_paid"
@@ -18,10 +19,10 @@
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/sf_pro_display_medium"
         android:padding="15dp"
-        android:text="Оплатить 198 036 ₽"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:cornerRadius="15dp" />
+        app:cornerRadius="15dp"
+        tools:text="Оплатить 198 036 ₽" />
 
 </androidx.cardview.widget.CardView>
