--- a/app/src/main/res/layout/room_recycler_item.xml
+++ b/app/src/main/res/layout/room_recycler_item.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="12dp">
+    app:cardCornerRadius="12dp"
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -36,12 +36,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sf_pro_display_medium"
-            android:text="Стандартный с видом на бассейн или сад"
             android:textColor="@color/black"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/slider_room_item" />
+            app:layout_constraintTop_toBottomOf="@+id/slider_room_item"
+            tools:text="Стандартный с видом на бассейн или сад" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_peculiarities_room"
@@ -74,10 +74,10 @@
             android:id="@+id/room_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_16"
             app:cardBackgroundColor="@color/blue_light"
             app:cardCornerRadius="5dp"
             app:cardElevation="0dp"
-            android:layout_marginTop="@dimen/dimen_16"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraint_peculiarities_room">
 
@@ -94,9 +94,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sf_pro_display_medium"
+                    android:text="@string/room_detaild"
                     android:textColor="@color/blue"
-                    android:textSize="16sp"
-                    android:text="Подробнее о номере" />
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -122,18 +122,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/sf_pro_display_semibold"
-                android:text="186 800 р"
                 android:textColor="@color/black"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                tools:text="186 800 р" />
 
             <TextView
                 android:id="@+id/tv_room_pricePer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/sf_pro_display_regular"
-                android:text="за 7 дней с перелетом"
                 android:textColor="@color/grey"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                tools:text="за 7 дней с перелетом" />
 
         </LinearLayout>
 
@@ -143,10 +143,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:backgroundTint="@color/blue"
+            android:elevation="0dp"
             android:fontFamily="@font/sf_pro_display_medium"
             android:padding="15dp"
-            android:elevation="0dp"
-            android:text="Выбрать номер"
+            android:text="@string/room_button"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="16sp"
